CRUD FÖR ENGINE (#59)
Co-authored-by: EmeliaSundelund <Emelia_sundelund@hotmail.com>
Co-authored-by: Tobias Andersson <tobias.andersson@student.nbi-handelsakademin.se>

--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -21,4 +21,12 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Repository\Engines\" />
+    <None Remove="Repository\Engines\Interface\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repository\Engines\" />
+    <Folder Include="Repository\Engines\Interface\" />
+  </ItemGroup>
 </Project>
