Feature/114 engine merge to development (#116)
* CRUD FÖR ENGINE

* lagt till yttligare enginename

* ändrat i engineController

* fixat delete och add i engeinemodelconsolle

* Added Migration and fixed DependencyInjection

* Fixed API.csproj

* dotnet format

---------

Co-authored-by: EmeliaSundelund <Emelia_sundelund@hotmail.com>
Co-authored-by: Tobias Andersson <tobias.andersson@student.nbi-handelsakademin.se>

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,6 +7,8 @@
     <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -19,5 +21,4 @@
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
-
 </Project>
