--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -34,5 +34,6 @@
     <Folder Include="EngineTests\" />
     <Folder Include="EngineTests\CommandTests\" />
     <Folder Include="EngineTests\QueryTest\" />
+    <Folder Include="GearboxTests\QueryTests\" />
   </ItemGroup>
 </Project>
