--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Commands\Seats\DeleteSeat\**" />
+    <Compile Remove="Commands\Seats\UpdateSeat\**" />
+    <EmbeddedResource Remove="Commands\Seats\DeleteSeat\**" />
+    <EmbeddedResource Remove="Commands\Seats\UpdateSeat\**" />
+    <None Remove="Commands\Seats\DeleteSeat\**" />
+    <None Remove="Commands\Seats\UpdateSeat\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
