Implemented sendgrid to the project.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DatabaseConnection": "Data Source=(localdb)\\clean-api-groupassignment;Initial Catalog=cleanapigroupassignment;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "SendGrid": {
+    "SendGridApiKey": "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"
+  },
   "AllowedHosts": "*"
 }
